kubernetes/apps/observability/thanos/app/httproute-internal.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query-frontend
  namespace: observability
spec:
  hostnames:
    - "thanos.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: thanos-query-frontend
          port: 10902
